# dev-app

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: github-actions-ci.yml
config/: urls.py
config/settings/: common.py  dev.py  prd.py
hello_world/: models.py  urls.py
hello_world/migrations/: 0001_initial.py  0002_auto_20220616_1336.py
hello_world/views/: index.py
